--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
-<marquee>Welcome to my Prograte</marquee></h1>
-<head>Selamat Mencoba</head>
+  <head>
+    <title>Program PK 2</title>
+    <link rel="stylesheet" href="stylesheet.css">
+<h1><marquee>Welcome to my Prograte</marquee></h1>
+</head>
 </html>
