--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Program PK 2</title>
     <link rel="stylesheet" href="stylesheet.css">
-<h1><marquee>Welcome to my Prograte</marquee></h1>
-    <h2>Siti Sakinah Mawaddah</h2>
+<h1><marquee>Welcome to my Github</marquee></h1>
+    <h2>Siti Sakinah Mawaddah (18610008)</h2>
 </head>
 </html>
