--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body>
     <div class="header">
 
-      <div class="header-logo">Progate</div>
+      <div class="header-logo">Github</div>
       
 
       <div class="header-list">
         <ul>
-          <li>About</li>
-          <li>Lessons</li>
-          <li>Contact us</li>
+          <li>Siti Sakinah Mawaddah</li>
+          <li>Prokgram Komputer 2</li>
+          <li>18610008</li>
         </ul>
       </div>
       
