--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <body>
     <div class="header">
 
-      <div class="header-logo">Github</div>
+      <div class="header-logo">GITHUB</div>
       
-
       <div class="header-list">
         <ul>
           <li>Siti Sakinah Mawaddah</li>
